--- a/medicalApp/Base.lproj/Main.storyboard
+++ b/medicalApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zFQ-1f-Fkz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zFQ-1f-Fkz">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -115,7 +115,7 @@
                         </userDefinedRuntimeAttributes>
                     </tabBar>
                     <connections>
-                        <segue destination="9BL-Cm-uKi" kind="relationship" relationship="viewControllers" id="pfj-u4-BRd"/>
+                        <segue destination="5MF-wj-epn" kind="relationship" relationship="viewControllers" id="2CY-aq-w9y"/>
                         <segue destination="Stm-gw-42c" kind="relationship" relationship="viewControllers" id="HQu-fY-7Ck"/>
                         <segue destination="ppq-RW-wx6" kind="relationship" relationship="viewControllers" id="Njn-ZQ-7ww"/>
                         <segue destination="iHi-2w-ttA" kind="relationship" relationship="viewControllers" id="AoC-t2-rLT"/>
@@ -124,6 +124,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bKa-Uo-XmD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2488" y="80"/>
+        </scene>
+        <!--USERS-->
+        <scene sceneID="ieL-Q8-QAo">
+            <objects>
+                <tableViewController title="USERS" id="5MF-wj-epn" customClass="UserViewController" customModule="medicalApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="aLF-sl-hyl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="XHr-bO-tmm">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XHr-bO-tmm" id="Y2W-M7-fIk">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="5MF-wj-epn" id="daf-Zd-mnE"/>
+                            <outlet property="delegate" destination="5MF-wj-epn" id="pcF-P8-c3m"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="USERS" image="list.bullet.rectangle" catalog="system" id="nX0-fR-YHg"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A3V-HE-swt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3566" y="-1157"/>
         </scene>
         <!--PATIENTS-->
         <scene sceneID="Zq4-2i-bd8">
