--- a/medicalApp/Base.lproj/Main.storyboard
+++ b/medicalApp/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                 <rect key="frame" x="69" y="350" width="276" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Forgot Password?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1CV-J0-vHH">
                                 <rect key="frame" x="97" y="404" width="220" height="40"/>
@@ -92,6 +92,10 @@
                         <color key="backgroundColor" red="0.92549639939999995" green="0.92547899479999995" blue="0.9254907966" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
                     <navigationItem key="navigationItem" id="y7g-Ll-snQ"/>
+                    <connections>
+                        <outlet property="email" destination="lCM-bA-47n" id="FQ1-GN-cun"/>
+                        <outlet property="password" destination="w76-im-BVR" id="GuF-TC-ZSZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -115,7 +119,7 @@
                         </userDefinedRuntimeAttributes>
                     </tabBar>
                     <connections>
-                        <segue destination="5MF-wj-epn" kind="relationship" relationship="viewControllers" id="2CY-aq-w9y"/>
+                        <segue destination="DD6-sb-DDW" kind="relationship" relationship="viewControllers" id="0eT-wU-9uW"/>
                         <segue destination="Stm-gw-42c" kind="relationship" relationship="viewControllers" id="HQu-fY-7Ck"/>
                         <segue destination="ppq-RW-wx6" kind="relationship" relationship="viewControllers" id="Njn-ZQ-7ww"/>
                         <segue destination="iHi-2w-ttA" kind="relationship" relationship="viewControllers" id="AoC-t2-rLT"/>
@@ -124,6 +128,98 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bKa-Uo-XmD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2488" y="80"/>
+        </scene>
+        <!--All users-->
+        <scene sceneID="8bt-Wu-Fdn">
+            <objects>
+                <viewController id="DD6-sb-DDW" customClass="Allpatients" customModule="medicalApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ov8-Lc-jhc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WfO-4I-PBS">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="uhe-Zz-Avs"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="All users" image="person.3.fill" catalog="system" id="6f7-yQ-bA2"/>
+                    <connections>
+                        <outlet property="tableView" destination="WfO-4I-PBS" id="eWn-Rz-suZ"/>
+                        <segue destination="jyU-Jf-uqM" kind="show" identifier="showDetails" id="flM-iw-hL8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q5k-6Z-56L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3565.217391304348" y="-1813.3928571428571"/>
+        </scene>
+        <!--Individualpatient-->
+        <scene sceneID="O1e-8f-cre">
+            <objects>
+                <viewController id="jyU-Jf-uqM" customClass="Individualpatient" customModule="medicalApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GuP-2C-O5z">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Tvw-OB-2JB">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="269" id="sZQ-sG-yoD" customClass="CutomizedTableViewCell" customModule="medicalApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="269"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sZQ-sG-yoD" id="hi6-AI-FtO">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="269"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y6k-b2-WCE">
+                                                    <rect key="frame" x="20" y="11" width="374" height="190"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Y6k-b2-WCE" secondAttribute="height" multiplier="187:95" id="WSk-Po-ciA"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dyN-3b-QZF">
+                                                    <rect key="frame" x="67" y="220" width="281" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="dyN-3b-QZF" secondAttribute="height" multiplier="281:21" id="vCa-nn-CLA"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Y6k-b2-WCE" firstAttribute="trailing" secondItem="hi6-AI-FtO" secondAttribute="trailingMargin" id="Jqv-7H-qu1"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="dyN-3b-QZF" secondAttribute="bottom" constant="17" id="P2N-Gq-I8w"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="dyN-3b-QZF" secondAttribute="trailing" constant="46" id="UJD-7h-4eF"/>
+                                                <constraint firstItem="dyN-3b-QZF" firstAttribute="leading" secondItem="hi6-AI-FtO" secondAttribute="leadingMargin" constant="47" id="eZ7-65-Tfd"/>
+                                                <constraint firstItem="Y6k-b2-WCE" firstAttribute="top" secondItem="hi6-AI-FtO" secondAttribute="topMargin" id="gOm-7g-Kvi"/>
+                                                <constraint firstItem="Y6k-b2-WCE" firstAttribute="leading" secondItem="hi6-AI-FtO" secondAttribute="leadingMargin" id="lVS-9y-ZB5"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="myimage" destination="Y6k-b2-WCE" id="s8d-J0-y0n"/>
+                                            <outlet property="mytag" destination="dyN-3b-QZF" id="WHA-gb-ugO"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Thf-2R-3vq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="iD4-VX-XXR"/>
+                    <connections>
+                        <outlet property="tableView" destination="Tvw-OB-2JB" id="qXx-QF-U9C"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wI9-99-LWc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4413.04347826087" y="-1813.3928571428571"/>
         </scene>
         <!--USERS-->
         <scene sceneID="ieL-Q8-QAo">
@@ -488,6 +584,7 @@
         <image name="gear" catalog="system" width="128" height="119"/>
         <image name="list.bullet.rectangle" catalog="system" width="128" height="93"/>
         <image name="person" catalog="system" width="128" height="117"/>
+        <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
